fix: `StackOverflow` in runtime (#40)
* fix: `StackOverflow` in runtime

* fix: set up `Dockerfile` and `docker compose`