@@ -20,6 +20,9 @@
 
     <scm>
         <url>https://github.com/baptistegh/trino-http-group-provider</url>
+        <connection>scm:git:git://github.com/baptistegh/trino-http-group-provider.git</connection>
+        <developerConnection>scm:git:git@github.com/baptistegh/trino-http-group-provider.git</developerConnection>
+        <tag>${project.version}</tag>
     </scm>
 
     <developers>
@@ -37,24 +40,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <air.main.basedir>${project.basedir}</air.main.basedir>
-
-        <air.release.push-changes>true</air.release.push-changes>
-
-        <air.check.skip-extended>true</air.check.skip-extended>
-        <air.check.skip-license>false</air.check.skip-license>
-
-        <air.check.fail-checkstyle>true</air.check.fail-checkstyle>
-        <air.check.skip-checkstyle>false</air.check.skip-checkstyle>
-
         <dep.trino.version>477</dep.trino.version>
-        <dep.airlift.version>369</dep.airlift.version>
+        <dep.airlift.version>361</dep.airlift.version>
+        <dep.opentelemetry.version>1.54.1</dep.opentelemetry.version>
+        <dep.jackson.version>2.20.0</dep.jackson.version>
+
         <dep.joda.version>2.12.6</dep.joda.version>
-        <dep.errorprone.version>2.24.1</dep.errorprone.version>
         <dep.junit.version>6.0.0</dep.junit.version>
         <dep.mockito.version>5.20.0</dep.mockito.version>
-        <dep.bytebuddy.version>1.17.8</dep.bytebuddy.version>
-        <dep.wiremock.version>3.0.1</dep.wiremock.version>
         <dep.assertj.version>3.27.6</dep.assertj.version>
 
         <air.javadoc.lint>-missing</air.javadoc.lint>
@@ -66,6 +59,12 @@
             <artifactId>trino-spi</artifactId>
             <version>${dep.trino.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.trino</groupId>
+            <artifactId>trino-plugin-toolkit</artifactId>
+            <version>476</version> <!-- trino-plugin-toolkit is not available for 477 yet -->
         </dependency>
 
         <dependency>
@@ -88,34 +87,15 @@
         </dependency>
 
         <dependency>
-            <groupId>jakarta.validation</groupId>
-            <artifactId>jakarta.validation-api</artifactId>
-            <version>3.1.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.20.0</version>
+            <version>${dep.jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>bootstrap</artifactId>
             <version>${dep.airlift.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.airlift</groupId>
-            <artifactId>node</artifactId>
-            <version>${dep.airlift.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>7.0.0</version>
         </dependency>
 
         <dependency>
@@ -128,21 +108,14 @@
         <dependency>
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-api</artifactId>
-            <version>1.55.0</version>
+            <version>${dep.opentelemetry.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>io.opentelemetry</groupId>
             <artifactId>opentelemetry-context</artifactId>
-            <version>1.55.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.opentelemetry</groupId>
-            <artifactId>opentelemetry-common</artifactId>
-            <version>1.55.0</version>
+            <version>1.54.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -175,20 +148,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy</artifactId>
-            <version>${dep.bytebuddy.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy-agent</artifactId>
-            <version>${dep.bytebuddy.version}</version>
-            <scope>test</scope>
-        </dependency>
-
         <!-- Airlift test dependencies -->
         <dependency>
             <groupId>io.airlift</groupId>
@@ -196,18 +155,21 @@
             <version>${dep.airlift.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>http-server</artifactId>
             <version>${dep.airlift.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>json</artifactId>
             <version>${dep.airlift.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>io.airlift</groupId>
             <artifactId>log-manager</artifactId>
@@ -249,9 +211,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</argLine>
-                </configuration>
             </plugin>
 
             <!-- Integration Tests -->
@@ -259,9 +218,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.5.4</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
